--- a/app/src/main/res/layout/add_pin_card.xml
+++ b/app/src/main/res/layout/add_pin_card.xml
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <variable
+            name="viewmodel"
+            type="com.michaelpessoni.mapdesafiofordiel.ui.userlocation.MapViewModel" />
+    </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -21,14 +28,32 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/coordinates_tv"
+                android:id="@+id/gps_tv"
                 style="@style/TextAppearance.Material3.TitleMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="8dp"
-                android:text="GPS: 35.456, 72.895"
+                android:text="GPS:"
                 app:layout_constraintStart_toStartOf="@id/add_pin_title_tv"
                 app:layout_constraintTop_toBottomOf="@id/add_pin_title_tv" />
+            <TextView
+                android:id="@+id/latitude_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toEndOf="@+id/gps_tv"
+                app:layout_constraintTop_toTopOf="@id/gps_tv"
+                tools:text="27.000"
+                style="@style/TextAppearance.Material3.TitleMedium" />
+            <TextView
+                android:id="@+id/longitude_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toEndOf="@id/latitude_tv"
+                app:layout_constraintTop_toTopOf="@id/gps_tv"
+                tools:text="27.000"
+                style="@style/TextAppearance.Material3.TitleMedium" />
 
             <ImageButton
                 android:id="@+id/add_pin_button"
