--- a/app/src/main/res/layout/add_pin_card.xml
+++ b/app/src/main/res/layout/add_pin_card.xml
@@ -6,7 +6,7 @@
     <data>
         <variable
             name="viewmodel"
-            type="com.michaelpessoni.mapdesafiofordiel.ui.userlocation.MapViewModel" />
+            type="com.michaelpessoni.mapdesafiofordiel.ui.MapViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
