--- a/app/src/main/res/layout/add_pin_card.xml
+++ b/app/src/main/res/layout/add_pin_card.xml
@@ -56,7 +56,7 @@
                 style="@style/TextAppearance.Material3.TitleMedium" />
 
             <ImageButton
-                android:id="@+id/add_pin_button"
+                android:id="@+id/save_pin_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
