--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -21,7 +21,11 @@
         android:id="@+id/addPinFragment2"
         android:name="com.michaelpessoni.mapdesafiofordiel.ui.addpin.AddPinFragment"
         android:label="add_pin_fragment"
-        tools:layout="@layout/add_pin_fragment" />
+        tools:layout="@layout/add_pin_fragment" >
+        <action
+            android:id="@+id/action_addPinFragment2_to_userLocationFragment"
+            app:destination="@id/userLocationFragment" />
+    </fragment>
     <fragment
         android:id="@+id/showPinsFragment"
         android:name="com.michaelpessoni.mapdesafiofordiel.ui.showpins.ShowPinsFragment"
