--- a/app/src/main/res/layout/options_bottom_sheet.xml
+++ b/app/src/main/res/layout/options_bottom_sheet.xml
@@ -3,137 +3,137 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewmodel"
             type="com.michaelpessoni.mapdesafiofordiel.ui.MapViewModel" />
     </data>
 
-<androidx.cardview.widget.CardView
-    android:id="@+id/options_bottom_sheet"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:behavior_hideable="false"
-    app:behavior_peekHeight="100dp"
-    app:cardCornerRadius="30dp"
-    app:layout_behavior="@string/bottom_sheet_behavior">
-
-    <LinearLayout
+    <androidx.cardview.widget.CardView
+        android:id="@+id/options_bottom_sheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/expand_bottom_sheet"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_margin="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:src="@drawable/expand_icon" />
+        app:behavior_hideable="false"
+        app:behavior_peekHeight="100dp"
+        app:cardCornerRadius="30dp"
+        app:layout_behavior="@string/bottom_sheet_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/options_card_text"
-                style="@style/TextAppearance.Material3.TitleLarge"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="@string/options_card_text" />
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <ImageView
+                android:id="@+id/expand_bottom_sheet"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
-                android:src="@drawable/map_icon" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/show_pins_button"
-                android:layout_width="123dp"
-                android:layout_height="94dp"
+                android:layout_gravity="center_horizontal"
                 android:layout_margin="16dp"
-                android:backgroundTint="#7179B8"
                 android:clickable="true"
                 android:focusable="true"
-                android:padding="16dp"
-                app:cardCornerRadius="15dp">
+                android:src="@drawable/expand_icon" />
 
-                <LinearLayout
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/options_card_text"
+                    style="@style/TextAppearance.Material3.TitleLarge"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:orientation="vertical">
+                    android:text="@string/options_card_text" />
 
-                    <ImageView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@drawable/show_pins_icon" />
-
-                    <TextView
-                        style="@style/TextAppearance.Material3.TitleSmall"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-
-                        android:layout_marginVertical="8dp"
-                        android:text="@string/show_pins"
-                        android:textColor="@color/white" />
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/add_pins_button"
-                android:layout_width="123dp"
-                android:layout_height="94dp"
-                android:layout_margin="16dp"
-                android:backgroundTint="#5AB27D"
-                android:clickable="true"
-                android:focusable="true"
-                android:padding="16dp"
-                app:cardCornerRadius="15dp"
-                >
-
-                <LinearLayout
+                <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="vertical">
+                    android:layout_margin="8dp"
+                    android:src="@drawable/map_icon" />
+            </LinearLayout>
 
-                    <ImageView
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/show_pins_button"
+                    android:layout_width="123dp"
+                    android:layout_height="94dp"
+                    android:layout_margin="16dp"
+                    android:backgroundTint="#7179B8"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="16dp"
+                    app:cardCornerRadius="15dp">
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:src="@drawable/add_pin_icon" />
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
 
-                    <TextView
-                        style="@style/TextAppearance.Material3.TitleSmall"
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/show_pins_icon" />
+
+                        <TextView
+                            style="@style/TextAppearance.Material3.TitleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+
+                            android:layout_marginVertical="8dp"
+                            android:text="@string/show_pins"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/add_pins_button"
+                    android:layout_width="123dp"
+                    android:layout_height="94dp"
+                    android:layout_margin="16dp"
+                    android:backgroundTint="#5AB27D"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:padding="16dp"
+                    app:cardCornerRadius="15dp">
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:layout_marginVertical="8dp"
-                        android:text="Adicionar pin"
-                        android:textColor="@color/white" />
-                </LinearLayout>
+                        android:layout_gravity="center"
+                        android:orientation="vertical">
 
-            </androidx.cardview.widget.CardView>
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:src="@drawable/add_pin_icon" />
+
+                        <TextView
+                            style="@style/TextAppearance.Material3.TitleSmall"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:layout_marginVertical="8dp"
+                            android:text="@string/add_pin_string"
+                            android:textColor="@color/white" />
+                    </LinearLayout>
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
 
         </LinearLayout>
-
-    </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
 </layout>
