Create view models for each fragment, following separation of concerns

--- a/app/src/main/res/layout/options_bottom_sheet.xml
+++ b/app/src/main/res/layout/options_bottom_sheet.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewmodel"
-            type="com.michaelpessoni.mapdesafiofordiel.ui.MapViewModel" />
+            type="com.michaelpessoni.mapdesafiofordiel.ui.userlocation.UserLocationViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
