--- a/app/src/main/res/layout/add_pin_card.xml
+++ b/app/src/main/res/layout/add_pin_card.xml
@@ -7,7 +7,7 @@
 
         <variable
             name="viewmodel"
-            type="com.michaelpessoni.mapdesafiofordiel.ui.MapViewModel" />
+            type="com.michaelpessoni.mapdesafiofordiel.ui.addpin.AddPinViewModel" />
     </data>
 
     <androidx.cardview.widget.CardView
